Add base exception and uniq convenient header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ if (CMAKE_CURRENT_BINARY_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   message(FATAL_ERROR "Building in-source is not supported! Create a build dir and remove ${CMAKE_CURRENT_SOURCE_DIR}/CMakeCache.txt")
 endif()
 
-file(GLOB_RECURSE srcs LIST_DIRECTORIES true CONFIGURE_DEPENDS src/sugiyama/*.h)
-add_library(${PROJECT_NAME} INTERFACE)
-target_sources(${PROJECT_NAME} INTERFACE ${srcs})
-target_include_directories(${PROJECT_NAME} INTERFACE src)
-target_compile_features(${PROJECT_NAME} INTERFACE cxx_std_17)
+file(GLOB_RECURSE hdrs LIST_DIRECTORIES true CONFIGURE_DEPENDS src/sugiyama/*.h)
+file(GLOB_RECURSE srcs LIST_DIRECTORIES true CONFIGURE_DEPENDS src/sugiyama/*.cc)
+add_library(${PROJECT_NAME} STATIC ${srcs})
+target_sources(${PROJECT_NAME} INTERFACE ${hdrs})
+target_include_directories(${PROJECT_NAME} PUBLIC src)
+target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
