--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tests/deps/catch2"]
 	path = tests/deps/catch2
 	url = https://github.com/catchorg/Catch2
+[submodule "deps/magnum-singles"]
+	path = deps/magnum-singles
+	url = https://github.com/mosra/magnum-singles.git
